--- a/G4101_Intro_R.qmd
+++ b/G4101_Intro_R.qmd
@@ -11,6 +11,8 @@ theme: sandstone
 format:
   html:
     code-fold: true
+    code-summary: "Codigo"
+    code-tools: true
     html-math-method: katex
   pdf: default
   docx: default
